# oml

./: .gitignore  Angle.H  CMakeLists.txt  Makefile.am  NEWS  README.md  TODO  TODO_list  array.h  arrindex.h  binio.h  binop.h  cnumeric.h  cow.h  diagonalmatrix.h  dmatrix.h  gmon.out  gprof.out  heapsort.h  histogram.h  indexable.h  indexable_base.h  indexsort.h  indext.h  io2d.h  io3d.h  isnan.h  iterable.h  iterable_io.h  list.h  list_io.h  lusolver.h  matindex.h  matlimit.h  matrix.h  matrix3d.h  matrixalg.h  matrixbase.h  matsub.ci  matsub.h  (+32 more)
UnitTests/: Benchmarks.cpp  CMakeLists.txt  DiagonalMatrixTests.cpp  Epsilons.C  Epsilons.H  LinearAlgebraTests.C  LinearAlgebraTests.H  MatrixTests.C  MatrixTests.cc  Ranges.C  Ranges2.C  Subscriptors.C  SymmetricMatrixTests.cpp  Tests.H  UT-Array-complex.cc  UT-Array-double.cc  UT-Array-int.cc  UT-DMatrix-double.cc  UT-Eigen-double.cc  UT-List-complex.cc  UT-List-double.cc  UT-List-int.cc  UT-Matrix-complex.cc  UT-Matrix-double.cc  UT-Matrix3D-double.cc  UT-Matrix3D.cc  UT-Random-double.cc  UT-SMatrix-double.cc  UT-SolveTriDiagonal.cc  UT-SubMatrix-double.cc  UT-Vector-complex.cc  UT-Vector-double.cc  UT-Vector-int.cc  UT-Vector3D-double.cc  UT-Vector3D.cc  UT-cow-array-int.cc  UTDiagonalMatrix.cpp  UTLinearAlgebra.C  UTMatrix.cpp  UTMatrix3D.cpp  (+12 more)
UnitTests/oml2/: Matrix.H  Vector.H  subscriptors.H
cnumeric/: ch.cc  epsilon.cc  htribk.cc  htridi.cc  tql2.cc  tqlrat.cc
fourier/: fft.cc  radf2.cc  radf4.cc  test1.cc
include/old/: Angle.C  array_io.h  arrindex.h  histogram.h  io2d.h  matrix.cc  omlcomplex.h  shellsort.h  subarray.h  unpickle.h  vector2d.h  vector3d.h
include/oml/: cnumeric.h  diagonalmatrix.h  fakedouble.h  io3d.h  matrix.h  matrix3d.h  numeric.h  random.h  smatrix.h  vector.h  vector3d.h
include/oml/imp/: arrindex.h  binop.h  cow.h  index_t.h  indexable.h  indexable_base.h  indexsort.h  isnan.h  iterable.h  iterable_io.h  matindex.h  matlimit.h  matrixalg.h  matrixbase.h  matsub.ci  matsub.h  memops.h  minmax.h  mixtypes.h  ran250.h  rowcol.h  shape.h  smatindex.h  stream.h  submatrix.h  subvector.h  tstream.h  unop.h  vecindex.h  veclimit.h  xpr.h
include/oml/numeric/: ArpackEigenSolver.H  EigenSolver.H  LapackCholsky.H  LapackEigenSolver.H  LapackLinearSolver.H  LapackQRSolver.H  LapackSVDSolver.H  LinearSolver.H  PrimeEigenSolver.H  PrimeSVDSolver.H  QRSolver.H  SVDSolver.H  SparseEigenSolver.H  SparseSVDSolver.H  lusolver.h  svsolver.h
numeric/: cholsky.cc  eigsort.cc  gaussj.cc  invmat.cc  invtri.cc  lubksb.cc  lubksbm.cc  ludcmp.cc  lusolver.cc  qldecomp.cc  solvetri.cc  svbksb.cc  svdcmp.cc  svsolver.cc  tridiag.cc
src/: CMakeLists.txt  CNumericsDoubleDMatrix.cpp  InstanceComplex1.cpp  InstanceComplex2.cpp  InstanceComplex3.cpp  InstanceComplex4.cpp  InstanceComplexVec3.cpp  InstanceDouble1.cpp  InstanceDouble2.cpp  InstanceDouble3.cpp  InstanceDouble4.cpp  InstanceVec2.cpp  InstanceVec3.cpp  NumericsComplexDoubleDMatrix.cpp  NumericsDouble.cpp  NumericsDoubleDMatrix.cpp  diagonalmatrix.cc  diagonalmatrix.cpp  dmatrix.cc  instance_complex.cpp  instance_double.cpp  instance_int.cpp  instance_matrix_double.cpp  linear_algebra_complex.cpp  linear_algebra_double.cpp  matlimit.cc  matlimit.cpp  matrix.cc  matrix.cpp  matrixm.cpp  ran250.cc  ran250.cpp  smatrix.cc  smatrix.cpp  srcm  stream.cc  veclimit.cc  veclimit.cpp  vector.cc  vector.cpp  (+1 more)
src/cnumeric/: SVD.f  htribk.cc  htribk.cpp  htridi.cpp
src/fourier/: fft.h  fourn.cc  radfg.cc  rftf1.cc  rfti1.cc  test.cc
src/linear_algebra/: ArpackEigenSolver.C  CMakeLists.txt  LapackCholsky.C  LapackEigenSolver.C  LapackLinearSolver.C  LapackQRSolver.C  LapackSVDSolver.C  PrimeEigenSolver.C  PrimeSVDSolver.C  Solvers.C
src/numeric/: cholsky.cc  cholsky.cpp  eigsort.cc  eigsort.cpp  gaussj.cc  invmat.cpp  lubksb.cpp  lubksbm.cpp  ludcmp.cc  ludcmp.cpp  lusolver.cc  qldecomp.cc  qldecomp.cpp  solvetri.cpp  svbksb.cc  svbksb.cpp  svdcmp.cpp  svsolver.cc  svsolver.cpp  tridiag.cpp
srcm/: CMakeLists.txt  EigenSolver.C  Lapack.C  Lapack.cpp  LapackCholsky.C  LapackEigenSolver.cpp  LapackLinearSolver.C  LapackSVDSolver.cpp  Solvers.C  Solvers.cpp  arrindex.cpp  cow.cpp  diagonalmatrix.cpp  fakedouble.cpp  imp_numeric.cpp  indexable.cpp  indexsort.cpp  matindex.cpp  matlimits.cpp  matrix3d.cpp  matrixbase.cpp  matrixm.cpp  mixtypes.cpp  numeric.cpp  oml.cpp  random.cpp  rowcol.cpp  shape.cpp  smatindex.cpp  smatrix.cpp  stream.cpp  unop.cpp  vecindex.cpp  veclimitsm.cpp  vector3d.cpp  vectorm.cpp  xpr.cpp
